# asr-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SKILL.md  install.sh
.github/workflows/: build-linux-binary.yml  build-macos-binary.yml  build-windows-binary.yml  ci-build-all.yml  release-binaries.yml  release-from-artifacts.yml
docs/: README_en.md  REQUIREMENTS.md
include/: audio.hpp  model_manager.hpp  output.hpp  platform.hpp  transcriber.hpp  types.hpp
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1
src/: audio.cpp  main.cpp  model_manager.cpp  output.cpp  platform.cpp  transcriber.cpp
tests/: check_install_binary_name.sh  check_install_script_content.sh
